--- a/Spring Initialzr/reto/src/main/resources/application.properties
+++ b/Spring Initialzr/reto/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=4000
-spring.datasource.url=jdbc:mysql://localhost:3306/mimi?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tic_incidencias?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
