--- a/API version Final/Spring Initialzr/reto/src/main/resources/application.properties
+++ b/API version Final/Spring Initialzr/reto/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=4001
 # Configuraciones de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/tic_incidencias?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 directorio.subida=/archivosAdjuntos
 
