Modificación endpoints de subida y descarga de archivos adjuntos, modificación de la documentación de la API

--- a/API version Final/Spring Initialzr/reto/src/main/resources/application.properties
+++ b/API version Final/Spring Initialzr/reto/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tic_incidencias?useSSL=false&s
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
-directorio.subida=/archivosAdjuntos
+directorio.subida=archivosAdjuntos
 
 # Configuraciones de seguridad
 logging.level.org.springframework.security=DEBUG
@@ -16,6 +16,8 @@ jwt.expiration=1000000
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
+# Base URL para los archivos adjuntos
+archivo.base-url=http://localhost:4001
 
 
 # Configuración para seleccionar los endpoints a documentar
